# Chatbot-API

./: .env  .gitignore  README.md  app.py  botrun  connection.py  intent.mongodb  main.py  pyproject.toml  requirements.txt  test.mongodb  z_sample_intent_.json
app/: connection.py  main.py  requirements.txt
app/chatbot/: __init__.py  chat.py  intents.json  model.py  requirements.txt  response_tag.py  utils.py
auth/: token.py
chatbot/: README.md  __init__.py  chat.py  intents.json  model.pth  model.py  response_tag.py  train.py  utils.py
config/: config.py
database/: auth_database.py  chatbot_model.py  database.py  intent_database.py
exception/: auth.py  base.py  intent.py
models/: auth.py  chatbot_state.py  intent.py
nginx/: myapp.conf
ngnix/: myapp.conf
routers/: auth_router.py  chat_router.py  chatbot_router.py  intent_router.py
supervisor/: myapp.supervisor.conf
