[tool.poetry]
name = "chatbot-api"
version = "0.1.0"
description = ""
authors = ["Jhonas Palad <jhonasemmanuel@gmail.com>"]
readme = "README.md"
packages = [{include = "chatbot_api"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
beanie = "^1.19.2"
fastapi = "^0.97.0"
numpy = "^1.25.0"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
websockets = "^11.0.3"
uvicorn = "^0.22.0"
nltk = "^3.8.1"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pyjwt = "^2.7.0"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
